--- a/test_client/Cargo.toml
+++ b/test_client/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 serde = "1.0.136"
 futures = "0.3.19"
+counter = { path = "../lib/counter" }
 remoc = "0.9.13"
 tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
+tracing-subscriber = "0.3.7"
