--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-futures = "0.3.19"
-tokio = { version = "1", features = ["full"] }
-serde = { version = "1", features = ["derive"] }
-remoc = "0.9"
-bluer = "0.13"
-clap = { version = "3", features = ["derive"] }
-tracing = "0.1"
-tracing-subscriber = "0.3"
-anyhow = "1"
-rand = "0.8"
+futures = "0.3.21"
+serde = { version = "1.0.136", features = ["derive"] }
+remoc = "0.9.16"
+tokio  = { version = "1.17.0", features = ["full"] }
+bluer = {version = "0.15", features = ["full"] }
+# bluer = {path = "../bluer/bluer" }
+clap = { version = "3.1.12", features = ["derive"] }
+tracing = "0.1.34"
+tracing-subscriber = "0.3.11"
+tracing-stackdriver = "0.3.0"
+anyhow = "1.0.57"
+rand = "0.8.5"
+log = "0.4.0"
+env_logger = "0.9.0"
