--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,12 @@ tokio  = { version = "1.17.0", features = ["full"] }
 bluer = {version = "0.15", features = ["full"] }
 # bluer = {path = "../bluer/bluer" }
 clap = { version = "3.1.12", features = ["derive"] }
-tracing = "0.1.34"
-tracing-subscriber = "0.3.11"
+tracing = { version = "0.1.34", features=["log"]}
+tracing-subscriber = {version = "0.3.11", features =["env-filter", "registry", "fmt", "json"]}
+tracing-appender = "0.2.2"
 tracing-stackdriver = "0.3.0"
+tracing-bunyan-formatter = "0.3.2"
 anyhow = "1.0.57"
 rand = "0.8.5"
-log = "0.4.0"
-env_logger = "0.9.0"
+#log = "0.4.0"
+#env_logger = "0.9.0"
